added top div css

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <html>
     <head>
-        <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist.</title>
-        <!--<link rel="stylesheet" type="text/css" href="">-->
+        <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
+        <link rel="stylesheet" type="text/css" href="./css/grid.css">
         <!--<script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>-->
     </head>
     <body>
         <!-- Layout Div -->
         <div id="wrapper" class="grid layout">
             <div id="main" class="grid-1">
-                
+                <div id="logo">Benjamin R. Rhine</div>
+                <h1>Designer, Developer, Photographer, Philanthropist...</h1>
             </div>
             
         </div>
