--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
         <link rel="stylesheet" type="text/css" href="./css/grid.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
         <!--<script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>-->
     </head>
     <body>
