--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             
             <!-- Column 2 -->
             <div class="grid grid-3">
-                <div id="col2" class="">Testing1</div>
-                <div id="facebook" class="">Testing  2</div> 
+                <div id="col2" class="grid-1">Testing1</div>
+                <div id="facebook" class="grid-2">Testing  2</div> 
                 <div id="col4" class="">testing 3 </div>   
             </div>            
         </div>
