--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 
                 <div id="facebook" class="grid-2">Testing  2</div> 
                 
-                <div id="col4" class="grid-3">testing 3 </div>   
+                <div id="col4" class="grid-3 omega">testing 3 </div>   
             </div>            
         </div>
     </body>
