--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             
             <!-- Column 2 -->
-            <div class="grid grid-3">
+            <div class="grid grid-4">
                 <div id="col2" class="grid-1">
                     <h1>Test1</h1>   
                 </div>
@@ -26,9 +26,9 @@
                     <h1>Test2</h1>
                 </div> 
                 
-                <div id="col4" class="grid-3">
+                <!--<div id="col4" class="grid-3">
                     <h1>Test3</h1>
-                </div>   
+                </div>-->   
             </div>            
         </div>
     </body>
