--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <h1>Test1</h1>   
                 </div>
                 
-                <div id="facebook" class="grid-2 omega">
+                <div id="facebook" class="grid-1">
                     <h1>Test2</h1>
                 </div> 
                 
-                <!--<div id="col4" class="grid-3">
+                <div id="col4" class="grid-1 omega">
                     <h1>Test3</h1>
-                </div>-->   
+                </div> 
             </div>            
         </div>
     </body>
