--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <div id="about" class="grid-1 alpha"> 
                 </div>
                 <!-- Column 3 -->
-                <div id="facebook" class="grid-1"> 
+                <div id="facebook" class="grid-1">
+                    <a id="fbLink" href="https://www.facebook.com/rhine.ben" title="Ben Rhine's Facebook">
+                        <h1 id="fbHeader">Ben Rhine's Facebook</h1>
+                    </a>
                 </div> 
                 
                 <!-- Column 4 -->
