--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </div>
                 <!-- Column 3 -->
                 <div id="facebook" class="grid-1">
-                    <a id="fbLink" href="https://www.facebook.com/rhine.ben" title="Ben Rhine's Facebook">
-                        <h1 id="fbHeader">Ben Rhine's Facebook</h1>
+                    <a href="https://www.facebook.com/rhine.ben" title="Ben Rhine's Facebook">
+                        <h1>Ben Rhine's Facebook</h1>
                     </a>
                 </div> 
                 
