--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 </div>
                 <!-- Column 2 -->
                 <div id="linkedIn" class="grid-1">    
+                    <a href="www.linkedin.com/in/benrhine" title="Ben Rhine's linkedIn">
+                        <h1>Ben Rhine's LinkedIn</h1>
+                    </a>
                 </div>
                 <!-- Column 3 -->
                 <div id="contact" class="grid-1">
@@ -51,6 +54,9 @@
                 
                 <!-- Column 4 -->
                 <div id="twitter" class="grid-1 omega">
+                    <a href="https://twitter.com/BenRhine" title="Ben Rhine's Twitter">
+                        <h1>Ben Rhine's Twitter</h1>
+                    </a>     
                 </div> 
             </div>
         </div>
