--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <!-- Column 2 -->
                 <div id="linkedIn" class="grid-1">    
-                    <a href="www.linkedin.com/in/benrhine" title="Ben Rhine's linkedIn">
+                    <a href="http://linkedin.com/in/benrhine" title="Ben Rhine's linkedIn">
                         <h1>Ben Rhine's LinkedIn</h1>
                     </a>
                 </div>
