--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 
 <html>
     <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
         <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
-        <link rel="stylesheet" type="text/css" href="./css/grid.css">
-        <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <meta name="keywords" content="Ben Rhine, Benjamin Rhine, facebook, twitter, linkedin, resume, contact, web designer">
+        <meta name="description" content="Ben Rhine's Personal Landing Page!">
+        <meta name="author" content="Benjamin R. Rhine">
+        
+        <!-- Site Resources -->
+        <link rel="stylesheet" type="text/css" href="./css/grid.css" />
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
         <!--<script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>-->
+        <script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
     </head>
     <body>
         <!-- Layout Div -->
