--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <!-- Site Resources -->
         <link rel="stylesheet" type="text/css" href="./css/grid.css" />
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
+        
         <!--<script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>-->
-        <script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>
+        <!--<script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>-->
+        
     </head>
     <body>
         <!-- Layout Div -->
@@ -64,9 +66,14 @@
                 <div id="twitter" class="grid-1 omega">
                     <a href="https://twitter.com/BenRhine" title="Ben Rhine's Twitter">
                         <h1>Ben Rhine's Twitter</h1>
-                    </a>     
+                    </a>
+                    <div id="twitter_list">
+                        <ul id="twitter_updates"></ul>
+                    </div>
                 </div> 
             </div>
         </div>
+        <script src="http://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
+        <script src="http://twitter.com/statuses/user_timeline/BenRhine.json?callback=twitterCallback2&count=1" type="text/javascript"></script>
     </body>
 </html>
