--- a/index.html
+++ b/index.html
@@ -67,11 +67,16 @@
                     <a href="https://twitter.com/BenRhine" title="Ben Rhine's Twitter">
                         <h1>Ben Rhine's Twitter</h1>
                     </a>
-                    <div id="twitter_list">
-                        <ul id="twitter_updates"></ul>
-                    </div>
                 </div> 
             </div>
+            
+            <div id="twitter_t"></div>
+    	<div id="twitter_m">
+		   <div id="twitter_container">
+		       <ul id="twitter_update_list"></ul>
+		   </div>
+		</div>
+		<div id="twitter_b">
         </div>
         <script src="http://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
         <script src="http://twitter.com/statuses/user_timeline/BenRhine.json?callback=twitterCallback2&count=1" type="text/javascript"></script>
