--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <!-- Site Resources -->
         <link rel="stylesheet" type="text/css" href="./css/grid.css" />
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
+
+        <!-- Tweet Rotator -->
+        <script src="scripts/rotate.js" type="text/javascript"></script>
         
         <!--<script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>-->
         <!--<script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>-->
@@ -70,15 +75,12 @@
                 </div> 
             </div>
             
-            <div id="twitter_t"></div>
-    	<div id="twitter_m">
-		   <div id="twitter_container">
-		       <ul id="twitter_update_list"></ul>
-		   </div>
-		</div>
-		<div id="twitter_b">
-        </div>
-        <script src="http://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
-        <script src="http://twitter.com/statuses/user_timeline/BenRhine.json?callback=twitterCallback2&count=1" type="text/javascript"></script>
+            <div class="twitter-feed">
+                <a class="twitter-bird" title="Visit us on Twitter"
+                href="http://twitter.com/BenRhine" target="_blank">Visit us</a>
+            </div>  
+        <!-- Twitter Feed -->
+        <script src="scripts/twitter-feed.js" type="text/javascript"></script>
+        <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&include_rts=true&count=4&callback=twitterCallback2" type="text/javascript"></script>
     </body>
 </html>
