--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div> 
             </div>
             
-            <div class="twitter-feed">
+            <div class="grid grid-4 twitter-feed">
                 <a class="twitter-bird" title="Visit us on Twitter"
                 href="http://twitter.com/BenRhine" target="_blank">Visit us</a>
             </div>  
