--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
 
         <!-- Tweet Rotator -->
-        <script src="scripts/rotate.js" type="text/javascript"></script>
+        <script src="./scripts/rotate.js" type="text/javascript"></script>
         
         <!--<script type="text/javascript" src="assets/jquery-1.7.1.min.js"></script>-->
         <!--<script language="JavaScript" type="text/javascript" src="http://cdn.jquerytools.org/1.1.2/full/jquery.tools.min.js"></script>-->
@@ -80,7 +80,7 @@
                 href="http://twitter.com/BenRhine" target="_blank">Visit us</a>
             </div>  
         <!-- Twitter Feed -->
-        <script src="scripts/twitter-feed.js" type="text/javascript"></script>
+        <script src="./scripts/twitter-feed.js" type="text/javascript"></script>
         <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&include_rts=true&count=4&callback=twitterCallback2" type="text/javascript"></script>
     </body>
 </html>
