--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             </div>
             
             <div class="grid grid-4 twitter-feed">
+                <ul id="twitter_update_list" class="rotate"></ul> 
                 <a class="twitter-bird" title="Visit us on Twitter"
                 href="http://twitter.com/BenRhine" target="_blank">Visit us</a>
             </div>  
