--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <h1>Ben Rhine's Twitter</h1>
                     </a>
                 </div>--> 
-                <div class="twitter-feed">
+                <div class="twitter-feed grid-1 omega">
                     <ul id="twitter_update_list" class="rotate"></ul> 
                     <a class="twitter-bird" title="Visit us on Twitter"
                     href="http://twitter.com/BenRhine" target="_blank">Visit us</a>
