--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+        <meta http-equiv="Content-Type" content="text/html" />
         <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
         <meta name="keywords" content="Ben Rhine, Benjamin Rhine, facebook, twitter, linkedin, resume, contact, web designer">
         <meta name="description" content="Ben Rhine's Personal Landing Page!">
@@ -81,7 +81,7 @@
                 </div> 
             </div>
             
-             
+        </div>     
         <!-- Twitter Feed -->
         <script src="scripts/twitter-feed.js" type="text/javascript"></script>
         <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&include_rts=true&count=4&callback=twitterCallback2" type="text/javascript"></script>
