--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="Content-Type" content="text/html" />
+        <!-- Use this charset: matches char set in script, href, link, ect...
+          -- this shortened version is also fully backward compatable -->
+        <meta charset='utf-8' />
         <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
         <meta name="keywords" content="Ben Rhine, Benjamin Rhine, facebook, twitter, linkedin, resume, contact, web designer">
         <meta name="description" content="Ben Rhine's Personal Landing Page!">
@@ -84,6 +85,6 @@
         </div>     
         <!-- Twitter Feed -->
         <script src="scripts/twitter-feed.js" type="text/javascript"></script>
-        <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&include_rts=true&count=4&callback=twitterCallback2" type="text/javascript"></script>
+        <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&amp;.include_rts=true&amp;.count=4&amp;.callback=twitterCallback2" type="text/javascript"></script>
     </body>
 </html>
