--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
         </div>     
         <!-- Twitter Feed -->
         <script src="scripts/twitter-feed.js" type="text/javascript"></script>
-        <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&amp;.include_rts=true&amp;.count=4&amp;.callback=twitterCallback2" type="text/javascript"></script>
+        <script src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=BenRhine&amp;include_rts=true&amp;count=4&amp;callback=twitterCallback2" type="text/javascript"></script>
     </body>
 </html>
