--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
     <head>
-        <!-- Use this charset: matches char set in script, href, link, ect...
-          -- this shortened version is also fully backward compatable -->
+        <!-- Use this charset: matches char set in script, href, link, ect... -->
+        <!-- this shortened version is also fully backward compatable -->
         <meta charset='utf-8' />
         <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
         <meta name="keywords" content="Ben Rhine, Benjamin Rhine, facebook, twitter, linkedin, resume, contact, web designer">
