--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <!-- this shortened version is also fully backward compatable -->
         <meta charset='utf-8' />
         <title>Benjamin R. Rhine: Designer, Developer, Photographer, Philanthropist...</title>
-        <meta name="keywords" content="Ben Rhine, Benjamin Rhine, facebook, twitter, linkedin, resume, contact, web designer">
-        <meta name="description" content="Ben Rhine's Personal Landing Page!">
-        <meta name="author" content="Benjamin R. Rhine">
+        <meta name="keywords" content="Ben Rhine, Benjamin Rhine, facebook, twitter, linkedin, resume, contact, web designer" />
+        <meta name="description" content="Ben Rhine's Personal Landing Page!" />
+        <meta name="author" content="Benjamin R. Rhine" />
         
         <!-- Site Resources -->
         <link rel="stylesheet" type="text/css" href="css/grid.css" />
