--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <!-- Column 3 -->
                 <div id="facebook" class="grid-1 square-modal">
-                    <a href="https://www.facebook.com/rhine.ben" title="Ben Rhine's Facebook">
+                    <a class="hidden-link" href="https://www.facebook.com/rhine.ben" title="Ben Rhine's Facebook">
                         <h1>Ben Rhine's Facebook</h1>
                     </a>
                 </div> 
@@ -60,7 +60,7 @@
                 </div>
                 <!-- Column 2 -->
                 <div id="linkedIn" class="grid-1 square-modal ">    
-                    <a href="http://linkedin.com/in/benrhine" title="Ben Rhine's linkedIn">
+                    <a class="hidden-link" href="http://linkedin.com/in/benrhine" title="Ben Rhine's linkedIn">
                         <h1>Ben Rhine's LinkedIn</h1>
                     </a>
                 </div>
