--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: null
-title: Jekyll Theme - Home Page - Massively
-description: Every great website starts with a great homepage. The homepage tells your viewers what your site is all about and gives your viewers a place to come back to.
+title: Ben Rhine - Home Page
+description: Ben Rhine's Landing page for resume, work, play, hobbies, and daily thoughts.
 sitemap:
     priority: 1.0
-    lastmod: 2017-11-02
+    lastmod: 2020-05-19
     changefreq: weekly
 ---
 <!DOCTYPE HTML>
@@ -28,9 +28,8 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>{{site.title}}</h1>
-						<h2>The Jekyll Theme Version</h2>
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
+						<h2>{{site.bio}}</h2>
+						<p>Ben is a seasoned polyglot developer and development team lead with more than a decade of experience under his belt. He has worked across the board from small startups to multiple Fortune 100 companies. He specializes in Java and Groovy on Grails development with excelent Javascript skills across several major frameworks.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -57,16 +56,9 @@ sitemap:
 									<p>With only a few edits, you can have a stunningly beautiful website <br />
                     nearly out of the box. Of course... you can always take it further <br />
                     and make it something even more amazing!</p>
+
 								</header>
-								<a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a>
-                <p>Regardless of your website's function, the homepage is what brings the user in.
-                  If it's anything short of intriguing, captivating, or just plain cool, you're out of luck and you might deter some visitors.</p>
-                <p>Your homepage must clearly describe what your site is about.
-									Having engaging content will in this manner enable you to offer and it will make your customers more inclined to purchase from you. Content is a way to position your organization in the correct place for your clients to discover you.
-								</p>
-								<p>
-									In this manner, content in itself is a standout amongst the best promoting apparatuses in your whole advertising toolbox! Rather than making your content around your promoting technique, it's limitlessly more productive to fabricate your showcasing around your content.
-								 </p>
+								<!-- <a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a> -->
 
 							</article>
 
