--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ sitemap:
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Bring me on for your next project</a></h2>
-									<p>With only a few edits, you can have a stunningly beautiful website <br />
-                    nearly out of the box. Of course... you can always take it further <br />
-                    and make it something even more amazing!</p>
+									<p>Send me a quick message about your project needs or just to chat <br />
+                    I'm always open to hear about exciting opportunities. Doors open with just a little bit of networking... <br />
+                    Lets see if we can do something amazing together!</p>
 
 								</header>
 								<!-- <a href="#" class="image main"><img src="{{ "/images/pic01.jpg" | absolute_url }}" alt="" /></a> -->
